setup saga template